--- a/src/app/modules/pedidos/consultar-pedidos/consultar-pedidos.component.html
+++ b/src/app/modules/pedidos/consultar-pedidos/consultar-pedidos.component.html
@@ -2,8 +2,8 @@
   <mat-card class="mat-elevation-z12 p-4">
     <div class="row">
       <div class="col d-flex justify-content-between align-items-center">
-        <p class="titulo">Pedidos</p>
-        <button mat-stroked-button color="warn" class="btn round mb-3" (click)="registrarNuevoPedido()">Registrar nuevo pedido</button>
+        <p class="titulo">Ordenes de Compra</p>
+        <button mat-stroked-button color="warn" class="btn round mb-3" (click)="registrarNuevoPedido()">Registrar nueva orden de compra</button>
       </div>
     </div>
 
@@ -62,7 +62,7 @@
 
 
   <mat-card-header class="header-card">
-    <h2 style="color: grey">Pedidos encontrados</h2>
+    <h2 style="color: grey">Ordenes de Compra encontradas</h2>
   </mat-card-header>
 
   <!-- loading -->
