--- a/src/app/modules/pedidos/consultar-pedidos/consultar-pedidos.component.html
+++ b/src/app/modules/pedidos/consultar-pedidos/consultar-pedidos.component.html
@@ -17,7 +17,7 @@
 
         <div class="col-md-3">
           <mat-form-field appearance="outline" class="w-100">
-            <mat-label>Número de Pedido</mat-label>
+            <mat-label>Número de Orden</mat-label>
             <input type="text" matInput [formControl]="txPedido"/>
           </mat-form-field>
         </div>
@@ -76,7 +76,7 @@
         <div class="col-md-12">
           <mat-table [dataSource]="tableDataSource" matSort>
             <ng-container matColumnDef="numeroPedido">
-              <mat-header-cell *matHeaderCellDef>Numero de Pedido</mat-header-cell>
+              <mat-header-cell *matHeaderCellDef>Numero de Orden</mat-header-cell>
               <mat-cell *matCellDef="let pedido" data-label="Pedido">{{ pedido.id }}</mat-cell>
             </ng-container>
 
