--- a/src/app/modules/productos/consultar-productos/consultar-productos.component.html
+++ b/src/app/modules/productos/consultar-productos/consultar-productos.component.html
@@ -13,11 +13,11 @@
       <div class="row pt-4">
         <div class="col-md-3">
           <mat-form-field appearance="outline" class="w-100">
-            <mat-label>Nombre</mat-label>
+            <mat-label>Producto</mat-label>
             <input type="text" matInput [formControl]="txNombre"/>
           </mat-form-field>
         </div>
-        <div class="col-md-2 custom-spacing">
+        <div class="col-md-auto">
           <mat-form-field appearance="outline" class="width-80">
             <mat-label>Tipo Producto</mat-label>
             <mat-select [formControl]="txTipo">
@@ -27,7 +27,7 @@
             </mat-select>
           </mat-form-field>
         </div>
-        <div class="col-md-2 custom-spacing">
+        <div class="col-md-auto">
           <mat-form-field appearance="outline" class="width-80">
             <mat-label>Proveedor</mat-label>
             <mat-select [formControl]="txProveedor">
@@ -37,7 +37,7 @@
             </mat-select>
           </mat-form-field>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-auto">
           <mat-form-field appearance="outline" class="w-100">
             <mat-label>Marca</mat-label>
             <mat-select [formControl]="txMarca">
@@ -80,20 +80,20 @@
                 <img [src]="producto.imgProducto" class="img-thumbnail"/>
               </mat-cell>
             </ng-container>
-            <ng-container matColumnDef="nombre">
-              <mat-header-cell *matHeaderCellDef>Nombre</mat-header-cell>
+            <ng-container matColumnDef="producto">
+              <mat-header-cell *matHeaderCellDef>Producto</mat-header-cell>
               <mat-cell *matCellDef="let producto">{{ producto.nombre }}</mat-cell>
             </ng-container>
-            <ng-container matColumnDef="costo">
-              <mat-header-cell *matHeaderCellDef>Costo</mat-header-cell>
+            <ng-container matColumnDef="costoCompra">
+              <mat-header-cell *matHeaderCellDef >Costo de Compra</mat-header-cell>
               <mat-cell *matCellDef="let producto">
-                {{ producto.costo | currency:'$':'symbol':'1.2-2' }}
+                $ {{ producto.costo | number:'1.2-2':'es-AR' }}
               </mat-cell>
             </ng-container>
-            <ng-container matColumnDef="costoImpuesto">
-              <mat-header-cell *matHeaderCellDef>Costo Impuestos</mat-header-cell>
+            <ng-container matColumnDef="precioBase">
+              <mat-header-cell *matHeaderCellDef>Precio sin IVA</mat-header-cell>
               <mat-cell *matCellDef="let producto">
-                {{ producto.costoImpuesto | currency:'$':'symbol':'1.2-2' }}
+                $ {{ producto.precioSinIVA | number:'1.2-2':'es-AR' }}
               </mat-cell>
             </ng-container>
             <ng-container matColumnDef="tipoProducto">
