--- a/src/app/modules/pedidos/registrar-pedido/registrar-pedido.component.html
+++ b/src/app/modules/pedidos/registrar-pedido/registrar-pedido.component.html
@@ -122,7 +122,7 @@
                 <mat-cell *matCellDef="let producto">{{ producto.nombre }}</mat-cell>
               </ng-container>
               <ng-container matColumnDef="costo">
-                <mat-header-cell *matHeaderCellDef>Costo</mat-header-cell>
+                <mat-header-cell *matHeaderCellDef>Costo de Compra</mat-header-cell>
                 <mat-cell *matCellDef="let producto">
                   $ {{ producto.costo | number:'1.2-2':'es-AR' }}
                 </mat-cell>
@@ -172,7 +172,7 @@
   <div class="row pt-4">
     <div class="col-md">
       <mat-form-field appearance="outline" class="w-100">
-        <mat-label>Costo Base de Productos</mat-label>
+        <mat-label>Costo de Compra</mat-label>
         <input type="text" matInput [formControl]="txSubtotal" mask="separator.2" prefix="$" thousandSeparator="," />
       </mat-form-field>
     </div>
