feat: poner imagen al producto y si no tiene el icono

--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.html
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.html
@@ -38,7 +38,7 @@
 
         <!-- Lista de productos a seleccionar -->
         <div class="row">
-          <div class="col-4 p-3" *ngFor="let producto of productos">
+          <div class="col-12 col-md-6 col-lg-4 p-4" *ngFor="let producto of productos"> <!-- Ajustar columnas para pantallas pequeñas -->
             <div class="card product-card"
                  [ngClass]="{'selected-card': producto.seleccionadoParaVenta}"
                  (click)="seleccionarProducto(producto)">
@@ -49,15 +49,25 @@
                 {{ producto.cantidadSeleccionada }}
               </div>
 
-              <div class="row h-50 d-flex justify-content-center align-items-center">
-                <mat-icon class="product-icon">loyalty</mat-icon>
+              <!-- Imagen del producto o icono si no hay imagen -->
+              <div class="row h-75 d-flex justify-content-center align-items-center">
+                <ng-container *ngIf="producto.imgProducto; else showIcon">
+                  <img [src]="producto.imgProducto" alt="{{producto.nombre}}" class="product-img">
+                </ng-container>
+                <ng-template #showIcon>
+                  <mat-icon class="product-icon">loyalty</mat-icon>
+                </ng-template>
               </div>
-              <div class="row align-items-center text-center my-2">
+
+              <!-- Nombre del producto -->
+              <div class="row align-items-center text-center my-3">
                 <div class="col">
                   {{producto.nombre}}
                 </div>
               </div>
-              <div class="row align-items-center text-center mb-2 my-1">
+
+              <!-- Precio del producto -->
+              <div class="row align-items-center text-center mb-3">
                 <div class="col">
                   <strong class="product-price">${{producto.costo}}</strong>
                 </div>
