--- a/src/styles.scss
+++ b/src/styles.scss
@@ -86,6 +86,15 @@ body {
   color: #f59f8a !important;
 }
 
+.custom-dialog-container {
+  overflow: hidden;  /* Oculta el desbordamiento exterior */
+}
+
+.custom-dialog-container .mat-dialog-content {
+  max-height: calc(85vh - 64px); /* Ajusta la altura del contenido para evitar solapamiento */
+  overflow-y: auto;  /* Habilita la barra de desplazamiento vertical */
+}
+
 @media (max-width: 1200px) {
   .titulo {
     font-size: 1.8rem;
