--- a/src/app/modules/clientes/registrar-clientes/registrar-clientes.component.html
+++ b/src/app/modules/clientes/registrar-clientes/registrar-clientes.component.html
@@ -1,1 +1,192 @@
-<p>registrar-clientes works!</p>
+<div class="container py-3 col-xl-11">
+  <br>
+  <div class="row">
+    <div class="col d-flex justify-content-between align-items-center">
+      <p class="titulo">{{esConsulta ? 'Consultar Empleado' : 'Registrar Empleado'}}</p>
+      <button *ngIf="esConsulta" class="btn" mat-icon-button matTooltip="Modificar" (click)="habilitarEdicion()">
+        <mat-icon class="editar">edit</mat-icon>
+      </button>
+    </div>
+  </div>
+
+  <form [formGroup]="form">
+
+    <div class="row pt-4">
+      <h3>Datos generales:</h3>
+      <mat-divider></mat-divider>
+      <br>
+
+      <div class="col-md-4">
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Nombre</mat-label>
+          <input type="text" matInput [formControl]="txNombre"/>
+        </mat-form-field>
+      </div>
+
+      <div class="col-md-4">
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Apellido</mat-label>
+          <input type="text" matInput [formControl]="txApellido"/>
+        </mat-form-field>
+      </div>
+
+      <div class="col-md-4">
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Fecha de nacimiento</mat-label>
+          <input type="date" matInput [formControl]="txFechaNacimiento"/>
+        </mat-form-field>
+        <div *ngIf="form.get('txFechaNacimiento')?.touched || form.get('txFechaNacimiento')?.dirty">
+          <div *ngIf="form.get('txFechaNacimiento')?.hasError('fechaInvalida')">
+            La fecha de nacimiento debe ser anterior a hoy.
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row pt-4">
+
+      <div class="col-md-4">
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>CUIT/CUIL</mat-label>
+          <input type="text" mask="00-00000000-0" matInput [formControl]="txCuil"/>
+        </mat-form-field>
+      </div>
+
+      <div class="col-md-4">
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>DNI</mat-label>
+          <input type="text" matInput [formControl]="txDNI"/>
+        </mat-form-field>
+      </div>
+
+      <div class="col-md-4">
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Género</mat-label>
+          <mat-select [formControl]="ddGenero">
+            <mat-option *ngFor="let genero of generos" [value]="genero.id">
+              {{ genero.nombre }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+    </div>
+
+    <div class="row pt-4">
+      <h3>Domicilio:</h3>
+      <mat-divider></mat-divider>
+      <br>
+      <div class="col-md-3">
+        <mat-form-field appearance="outline">
+          <mat-label>Provincia</mat-label>
+          <input matInput
+                 placeholder="Ingrese"
+                 [formControl]="txProvincia"
+                 [matAutocomplete]="autoCompleteProvincia">
+        </mat-form-field>
+        <mat-autocomplete #autoCompleteProvincia="matAutocomplete" (optionSelected)="seleccionarProvincia()">
+          <mat-option *ngFor="let provincia of this.provinciasFiltradas" [value]="provincia.nombre">
+            {{provincia.nombre}}
+          </mat-option>
+        </mat-autocomplete>
+      </div>
+      <div class="col-md-3">
+        <mat-form-field appearance="outline">
+          <mat-label>Localidad</mat-label>
+          <input matInput
+                 placeholder="Ingrese"
+                 [formControl]="txLocalidad"
+                 (input)="filtrarLocalidades()"
+                 [matAutocomplete]="autoCompleteLocalidad">
+        </mat-form-field>
+        <mat-autocomplete #autoCompleteLocalidad="matAutocomplete" (optionSelected)="seleccionarLocalidad()">
+          <mat-option *ngFor="let localidad of this.localidadesFiltradas" [value]="localidad.nombre">
+            {{localidad.nombre}}
+          </mat-option>
+        </mat-autocomplete>
+      </div>
+
+      <div class="col-md-3">
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Calle</mat-label>
+          <input type="text" matInput [formControl]="txCalle"/>
+        </mat-form-field>
+      </div>
+      <div class="col-md-3">
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Número</mat-label>
+          <input type="text" matInput [formControl]="txNumero"/>
+        </mat-form-field>
+      </div>
+      <div class="row pt-2">
+        <div class="col-md-3">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Código Postal</mat-label>
+            <input type="text" matInput [formControl]="txCodigoPostal"/>
+          </mat-form-field>
+        </div>
+      </div>
+    </div>
+
+    <div class="row pt-4">
+      <h3>Empleado en el sistema:</h3>
+      <mat-divider></mat-divider>
+      <br>
+      <div class="col-md-4">
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Nombre de usuario</mat-label>
+          <input type="text" matInput [formControl]="txNombreUsuario"/>
+        </mat-form-field>
+      </div>
+
+      <div class="col-md-4">
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Contraseña</mat-label>
+          <input
+            matInput
+            type="password"
+            formControlName="txContrasena"
+            (focus)="applyPasswordValidations()"
+          />
+          <mat-error *ngIf="form.get('txContrasena')?.hasError('required')">La contraseña es requerida</mat-error>
+          <mat-error *ngIf="form.get('txContrasena')?.hasError('minlength')">La contraseña debe tener al menos 8 caracteres</mat-error>
+          <mat-error *ngIf="form.get('txContrasena')?.hasError('pattern')">La contraseña debe contener al menos una letra mayúscula y un número</mat-error>
+        </mat-form-field>
+      </div>
+
+      <!-- Selector de roles múltiples -->
+      <div class="col-md-4">
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Roles</mat-label>
+          <mat-select
+            [formControl]="txRoles"
+            multiple
+          >
+            <mat-option *ngFor="let rol of roles" [value]="rol.id">
+              {{ rol.nombre }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+    </div>
+
+  </form>
+
+  <br>
+
+  <!-- Btn de cancelar, registrar y modificar -->
+  <div class="row text-right">
+    <div class="col d-flex justify-content-end">
+      <button mat-button color="accent" class="btn round" (click)="cancelar()" id="btnLimpiarFiltro">
+        {{ (!data.editar && esConsulta) ? 'Volver' : 'Cancelar' }}
+      </button>
+      <button *ngIf="!esConsulta" mat-raised-button color="accent" class="btn round" (click)="registrarNuevoEmpleado()" id="btnBuscar">Registrar</button>
+      <button *ngIf="data.editar" mat-raised-button color="accent" class="btn round" (click)="modificarEmpleado()" id="btnBuscar2">Modificar</button>
+    </div>
+  </div>
+
+  <br>
+</div>
+
+
+
+
