--- a/src/app/modules/clientes/registrar-clientes/registrar-clientes.component.html
+++ b/src/app/modules/clientes/registrar-clientes/registrar-clientes.component.html
@@ -2,7 +2,7 @@
   <br>
   <div class="row">
     <div class="col d-flex justify-content-between align-items-center">
-      <p class="titulo">{{esConsulta ? 'Consultar Empleado' : 'Registrar Empleado'}}</p>
+      <p class="titulo">{{esConsulta ? 'Consultar Cliente' : 'Registrar Cliente'}}</p>
       <button *ngIf="esConsulta" class="btn" mat-icon-button matTooltip="Modificar" (click)="habilitarEdicion()">
         <mat-icon class="editar">edit</mat-icon>
       </button>
@@ -44,13 +44,6 @@
     </div>
 
     <div class="row pt-4">
-
-      <div class="col-md-4">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>CUIT/CUIL</mat-label>
-          <input type="text" mask="00-00000000-0" matInput [formControl]="txCuil"/>
-        </mat-form-field>
-      </div>
 
       <div class="col-md-4">
         <mat-form-field appearance="outline" class="w-100">
@@ -127,48 +120,6 @@
       </div>
     </div>
 
-    <div class="row pt-4">
-      <h3>Empleado en el sistema:</h3>
-      <mat-divider></mat-divider>
-      <br>
-      <div class="col-md-4">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Nombre de usuario</mat-label>
-          <input type="text" matInput [formControl]="txNombreUsuario"/>
-        </mat-form-field>
-      </div>
-
-      <div class="col-md-4">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Contraseña</mat-label>
-          <input
-            matInput
-            type="password"
-            formControlName="txContrasena"
-            (focus)="applyPasswordValidations()"
-          />
-          <mat-error *ngIf="form.get('txContrasena')?.hasError('required')">La contraseña es requerida</mat-error>
-          <mat-error *ngIf="form.get('txContrasena')?.hasError('minlength')">La contraseña debe tener al menos 8 caracteres</mat-error>
-          <mat-error *ngIf="form.get('txContrasena')?.hasError('pattern')">La contraseña debe contener al menos una letra mayúscula y un número</mat-error>
-        </mat-form-field>
-      </div>
-
-      <!-- Selector de roles múltiples -->
-      <div class="col-md-4">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Roles</mat-label>
-          <mat-select
-            [formControl]="txRoles"
-            multiple
-          >
-            <mat-option *ngFor="let rol of roles" [value]="rol.id">
-              {{ rol.nombre }}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-      </div>
-    </div>
-
   </form>
 
   <br>
@@ -179,8 +130,8 @@
       <button mat-button color="accent" class="btn round" (click)="cancelar()" id="btnLimpiarFiltro">
         {{ (!data.editar && esConsulta) ? 'Volver' : 'Cancelar' }}
       </button>
-      <button *ngIf="!esConsulta" mat-raised-button color="accent" class="btn round" (click)="registrarNuevoEmpleado()" id="btnBuscar">Registrar</button>
-      <button *ngIf="data.editar" mat-raised-button color="accent" class="btn round" (click)="modificarEmpleado()" id="btnBuscar2">Modificar</button>
+      <button *ngIf="!esConsulta" mat-raised-button color="accent" class="btn round" (click)="registrarNuevoCliente()" id="btnBuscar">Registrar</button>
+      <button *ngIf="data.editar" mat-raised-button color="accent" class="btn round" (click)="modificarCliente()" id="btnBuscar2">Modificar</button>
     </div>
   </div>
 
