--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.html
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.html
@@ -135,7 +135,7 @@
             </mat-form-field>
           </div>
           <div class="col-3">
-            <button mat-stroked-button color="warn" class="btn round new-client-btn">
+            <button mat-stroked-button color="warn" class="btn round new-client-btn" (click)="registrarCliente()">
               <mat-icon>add</mat-icon> Nuevo
             </button>
           </div>
